--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ ul {
 }
 .main-menu {
   width: 100%;
-  background-color: gray;
+  background-color: greenyellow;
   height: 60px;
 }
 main {
@@ -16,14 +16,19 @@ main {
   width: 980px;
   position: relative;
 }
+a {
+  text-decoration: none;
+  font-size: 20px;
+}
 .logo {
-  padding: 20px;
+  padding: 18px;
+  background-color: green;
+  color: aquamarine;
 }
 .header-2 {
   background-color: white;
-  width: 980px;
+  width: 470px;
   margin: 0 auto;
-  padding: 16px;
 }
 .menu-urls {
   border-bottom: 3px solid #efefef;
@@ -34,7 +39,7 @@ main {
 }
 
 .menu ul li a {
-  color: brown;
+  color: green;
   text-decoration: none;
   font-size: 20px;
 }
@@ -43,4 +48,15 @@ main {
   width: 100%;
   float: left;
   position: relative;
+}
+.text{
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+}
+.buy{
+  background-color: gray;
+}
+.team{
+  background-color: gray;
 }
